# Todos

./: .env.example  .gitignore  README.md  SPECIFICATION.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  e2e-tests.yml
.qoder/: mcp.json  rules.md  skills.md
.qoder/repowiki/ja/content/: Dockerコンテナ化.md  アーキテクチャ.md  クイックスタート.md  クイックスタートガイド.md  セキュリティ.md  テスト戦略.md  デプロイメントガイド.md  データモデル.md  トラブルシューティング.md  バックエンド開発.md  フロントエンド開発.md  プロジェクト概要.md  開発者ガイド.md
.qoder/repowiki/ja/content/APIリファレンス/: APIリファレンス.md  TODO管理API.md  ヘルスチェックAPI.md  ユーザーAPI.md  認証API.md
.qoder/repowiki/ja/content/CRUD操作/: CRUD操作.md  TODO CRUD操作.md  ユーザーCRUD操作.md
.qoder/repowiki/ja/content/アーキテクチャ/: アーキテクチャ.md  インフラアーキテクチャ.md  (+3 more)
.qoder/repowiki/ja/meta/: repowiki-metadata.json
.trae/rules/: project_rules.md
.vercel-tmp/: vercel-login.cjs
backend/: pyproject.toml
backend/app/: auth.py  crud.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  todos.py  users.py
backend/app/core/: config.py  db.py  limiter.py  logging.py  security.py
backend/app/crud/: crud_todo.py  crud_user.py
backend/app/middleware/: error_handler.py  logging.py
backend/app/models/: todo.py  user.py
backend/app/schemas/: error.py  todo.py  token.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 4f4084d80ebd_create_users_and_todos_tables.py  add_indexes.py
backend/tests/: conftest.py  test_auth.py  test_errors.py  test_todos.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: auth_specification.md  current_status.md
frontend/: jest.config.js  jest.setup.ts  package.json  playwright.config.ts  vercel.json
frontend/e2e/fixtures/: user-fixture.ts
frontend/e2e/pages/: login.page.ts  todo.page.ts
frontend/e2e/tests/: auth.spec.ts  todos.spec.ts
frontend/playwright-report/: index.html
frontend/src/: middleware.ts
frontend/src/__tests__/: theme-toggle.test.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/_components/: Pagination.tsx  TodoEditDialog.tsx  TodoFilterPanel.tsx  TodoItemList.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/hooks/: useTodos.ts
(+30 files in other folders)
